Wed Oct 06 06:15:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Make the rollback opoeration a safe no-op if
	there is no transaction in progress.
	* Postgres.m: Improve exception text by reporting the offending
	SQL statement(s).

Fri Sep 17 16:55:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: When reporting the duration of a commit or
	rollback, report text of all the statements in the transaction.

Fri Aug 28 09:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.[hm]: Add support for limiting maximum number of incoming
	sessions permitted from mone host.

Tue Aug 24 14:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.[hm]: Add support for HTTP/1.1 persistent connections.

Sun Aug 22 10:35:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Add ([SQLRecord-dictionary]) and tidy/comment the
	class a bit better.

Sat Aug 07 14:25:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Add session timeouts to kill off idle sessions.

Tue Jul 27 17:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

        * configure.ac: Give more help when postgres is not found.
	* configure: regenerate
		
Mon Jul 26 09:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Add -transaction method and SQLTransaction class
	* SQLClient.m: Implement -transaction method and SQLTransaction class
	to provide a simple convenient mechanism for executing a sequence
	of statements as a single transaction.

Thu Jul 15 09:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: ([_didRead:]) more informative logging upon reading
	an unexpected end-of-file

Wed Jul 14 12:07:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* configure.ac: Check for PQfformat in libpq, if it is not there
	but the library is there, warn that it is too old.

Thu Jul 02 17:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Add control over character encoding used to